--- a/package.json
+++ b/package.json
@@ -14,29 +14,32 @@
     "bcrypt": "^5.1.1",
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
     "handlebars": "^4.7.8",
-    "helmet": "^7.0.0",
+    "helmet": "^7.2.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-simple": "^0.5.6",
-    "mongoose": "^7.5.0",
+    "mongoose": "^7.8.7",
     "morgan": "^1.10.0",
     "openapi-to-postmanv2": "^5.0.0",
+    "path": "^0.12.7",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
+    "@types/cors": "^2.8.18",
+    "@types/express": "^4.17.22",
+    "@types/handlebars": "^4.1.0",
+    "@types/helmet": "^4.0.0",
     "@types/jest": "^29.5.14",
     "@types/joi": "^17.2.2",
     "@types/jwt-simple": "^0.5.36",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.5.9",
+    "@types/node": "^20.17.50",
     "@types/supertest": "^6.0.3",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
