--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "handlebars": "^4.7.8",
@@ -31,13 +32,15 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/chalk": "^2.2.4",
     "@types/cors": "^2.8.18",
     "@types/express": "^4.17.22",
     "@types/handlebars": "^4.1.0",
     "@types/helmet": "^4.0.0",
     "@types/jest": "^29.5.14",
-    "@types/joi": "^17.2.2",
+    "@types/joi": "^17.2.3",
     "@types/jwt-simple": "^0.5.36",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.17.50",
     "@types/supertest": "^6.0.3",
